✨ Add Rephrase & Translate features + Fix focus issues
- Add rephrase-text Supabase function (reformulate & correct text)
- Add translate-text Supabase function (translate to English)
- Fix focus preservation with improved timing (500ms delay)
- Fix copy mechanism with Cmd+A before Cmd+C
- Add loading spinner for each button (not just star)
- Improve error handling with retry mechanism
- Update config.js with new Supabase functions
- Add robust clipboard verification loop

--- a/.env
+++ b/.env
@@ -8,8 +8,7 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
 # OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4o-mini
+OPENAI_API_KEY=
 OPENAI_MAX_TOKENS=1000
 OPENAI_TEMPERATURE=0.7
 
