✨ Refonte complète UI avec glassmorphism et optimisations
- Style glassmorphism appliqué aux filtres avec effet frosted glass
- Police Inter intégrée pour une typographie moderne
- Titres de catégories alignés à gauche avec meilleure hiérarchie
- Interface compacte optimisée sans scroll
- Suppression des onglets multiples pour un design unifié
- Filtres épurés sans bordures avec fond transparent
- Scroll amélioré avec scrollbar visible et fonctionnelle
- Texte uniforme sans mise en avant des majuscules
- États hover et selected avec transitions fluides
- Expérience utilisateur optimisée et minimaliste

--- a/package.json
+++ b/package.json
@@ -12,9 +12,23 @@
     "start": "ELECTRON_APP_NAME=Stylo electron .",
     "dev": "ELECTRON_APP_NAME=Stylo electron . --dev"
   },
-  "keywords": ["electron", "macos", "floating", "interface", "ai", "text-enhancement", "stylo"],
+  "keywords": [
+    "electron",
+    "macos",
+    "floating",
+    "interface",
+    "ai",
+    "text-enhancement",
+    "stylo"
+  ],
   "license": "MIT",
   "devDependencies": {
     "electron": "^27.0.0"
+  },
+  "dependencies": {
+    "@composio/core": "^0.2.0",
+    "@composio/openai-agents": "^0.2.0",
+    "@openai/agents": "^0.2.1",
+    "dotenv": "^17.2.3"
   }
 }
