feat: Add LettA AI provider integration
- Add LettA AI as new provider option
- Configure LettA functions URLs in Supabase config
- Add LettA routing in script.js with callSupabaseLettA()
- Update menu providers to include LettA AI
- Increase timeout to 2 minutes for LettA AI performance
- Fix drag and drop functionality for Electron window
- Improve menu spacing and visual design

--- a/supabase-functions/package.json
+++ b/supabase-functions/package.json
@@ -10,7 +10,5 @@
   "dependencies": {
     "supabase": "^1.0.0"
   },
-  "devDependencies": {
-    "@types/deno": "^1.0.0"
-  }
+  "devDependencies": {}
 }
