--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
     "stylo"
   ],
   "license": "MIT",
-  "devDependencies": {
-    "electron": "^27.0.0"
-  },
   "dependencies": {
     "@composio/core": "^0.2.0",
     "@composio/openai-agents": "^0.2.0",
     "@openai/agents": "^0.2.1",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "electron": "^27.3.11"
   }
 }
